--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -477,6 +477,459 @@
    "source": [
     "df.describe()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Transforming Data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing the unique values in the categorical columns:\n",
+      "------------------------------------------------------\n",
+      "General_Health: ['Poor' 'Very Good' 'Good' 'Fair' 'Excellent']\n",
+      "Checkup: ['Within the past 2 years' 'Within the past year' '5 or more years ago'\n",
+      " 'Within the past 5 years' 'Never']\n",
+      "Exercise: ['No' 'Yes']\n",
+      "Heart_Disease: ['No' 'Yes']\n",
+      "Skin_Cancer: ['No' 'Yes']\n",
+      "Other_Cancer: ['No' 'Yes']\n",
+      "Depression: ['No' 'Yes']\n",
+      "Diabetes: ['No' 'Yes' 'No, pre-diabetes or borderline diabetes'\n",
+      " 'Yes, but female told only during pregnancy']\n",
+      "Arthritis: ['Yes' 'No']\n",
+      "Sex: ['Female' 'Male']\n",
+      "Age_Category: ['70-74' '60-64' '75-79' '80+' '65-69' '50-54' '45-49' '18-24' '30-34'\n",
+      " '55-59' '35-39' '40-44' '25-29']\n",
+      "Smoking_History: ['Yes' 'No']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Printing the unique values in the categorical columns:')\n",
+    "print('-'*54)\n",
+    "for col in df.select_dtypes('object').columns:\n",
+    "    print(f'{col}: {df[col].unique()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing the categorical columns which are binary valued:\n",
+      "---------------------------------------------------------\n",
+      "Exercise: ['No' 'Yes']\n",
+      "Heart_Disease: ['No' 'Yes']\n",
+      "Skin_Cancer: ['No' 'Yes']\n",
+      "Other_Cancer: ['No' 'Yes']\n",
+      "Depression: ['No' 'Yes']\n",
+      "Arthritis: ['Yes' 'No']\n",
+      "Sex: ['Female' 'Male']\n",
+      "Smoking_History: ['Yes' 'No']\n"
+     ]
+    }
+   ],
+   "source": [
+    "binary_valued_columns = [\n",
+    "    col\n",
+    "    for col in df.select_dtypes('object').columns\n",
+    "    if len(df[col].unique()) == 2\n",
+    "]\n",
+    "\n",
+    "print('Printing the categorical columns which are binary valued:')\n",
+    "print('-'*57)\n",
+    "for col in binary_valued_columns:\n",
+    "    print(f'{col}: {df[col].unique()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Factorizing binary valued columns:\n",
+      "----------------------------------\n",
+      "Exercise: [0 1]\n",
+      "Heart_Disease: [0 1]\n",
+      "Skin_Cancer: [0 1]\n",
+      "Other_Cancer: [0 1]\n",
+      "Depression: [0 1]\n",
+      "Arthritis: [0 1]\n",
+      "Sex: [0 1]\n",
+      "Smoking_History: [0 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Factorizing binary valued columns:')\n",
+    "print('-'*34)\n",
+    "for col in binary_valued_columns:\n",
+    "    df[col] = pd.factorize(df[col])[0]\n",
+    "    print(f'{col}: {df[col].unique()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 308854 entries, 0 to 308853\n",
+      "Data columns (total 19 columns):\n",
+      " #   Column                        Non-Null Count   Dtype  \n",
+      "---  ------                        --------------   -----  \n",
+      " 0   General_Health                308854 non-null  object \n",
+      " 1   Checkup                       308854 non-null  object \n",
+      " 2   Exercise                      308854 non-null  int64  \n",
+      " 3   Heart_Disease                 308854 non-null  int64  \n",
+      " 4   Skin_Cancer                   308854 non-null  int64  \n",
+      " 5   Other_Cancer                  308854 non-null  int64  \n",
+      " 6   Depression                    308854 non-null  int64  \n",
+      " 7   Diabetes                      308854 non-null  object \n",
+      " 8   Arthritis                     308854 non-null  int64  \n",
+      " 9   Sex                           308854 non-null  int64  \n",
+      " 10  Age_Category                  308854 non-null  object \n",
+      " 11  Height_(cm)                   308854 non-null  float64\n",
+      " 12  Weight_(kg)                   308854 non-null  float64\n",
+      " 13  BMI                           308854 non-null  float64\n",
+      " 14  Smoking_History               308854 non-null  int64  \n",
+      " 15  Alcohol_Consumption           308854 non-null  float64\n",
+      " 16  Fruit_Consumption             308854 non-null  float64\n",
+      " 17  Green_Vegetables_Consumption  308854 non-null  float64\n",
+      " 18  FriedPotato_Consumption       308854 non-null  float64\n",
+      "dtypes: float64(7), int64(8), object(4)\n",
+      "memory usage: 44.8+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing the unique values in the remaning categorical columns:\n",
+      "---------------------------------------------------------------\n",
+      "General_Health: ['Poor' 'Very Good' 'Good' 'Fair' 'Excellent']\n",
+      "Checkup: ['Within the past 2 years' 'Within the past year' '5 or more years ago'\n",
+      " 'Within the past 5 years' 'Never']\n",
+      "Diabetes: ['No' 'Yes' 'No, pre-diabetes or borderline diabetes'\n",
+      " 'Yes, but female told only during pregnancy']\n",
+      "Age_Category: ['70-74' '60-64' '75-79' '80+' '65-69' '50-54' '45-49' '18-24' '30-34'\n",
+      " '55-59' '35-39' '40-44' '25-29']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Printing the unique values in the remaning categorical columns:')\n",
+    "print('-'*63)\n",
+    "for col in df.select_dtypes('object').columns:\n",
+    "    print(f'{col}: {df[col].unique()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Custom factorized \"General_Health\" values:\n",
+      "------------------------------------------\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0.25, 0.5, 0.75, 1], dtype=object)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print('Custom factorized \"General_Health\" values:')\n",
+    "print('-'*42)\n",
+    "\n",
+    "# Uncomment the below in case of any warning for usage of deprecated method.\n",
+    "pd.set_option('future.no_silent_downcasting', True)\n",
+    "\n",
+    "df[\"General_Health\"] = df[\"General_Health\"].replace(\n",
+    "    ['Poor', 'Fair', 'Good', 'Very Good', 'Excellent'],\n",
+    "    [0, 0.75, 0.50, 0.25, 1]\n",
+    ")\n",
+    "df[\"General_Health\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.  , 0.25, 0.5 , 0.75, 1.  ])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# In case you the dtype is shown as 'object' for the \"General_Health\" column, you can convert it to float using the below code:\n",
+    "df[\"General_Health\"] = pd.to_numeric(df[\"General_Health\"])\n",
+    "df[\"General_Health\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Custom factorized \"Checkup\" values:\n",
+      "----------------------------------\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.5, 0.75, 1, 0.25, 0], dtype=object)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print('Custom factorized \"Checkup\" values:')\n",
+    "print('-'*34)\n",
+    "\n",
+    "# Uncomment the below in case of any warning for usage of deprecated method.\n",
+    "pd.set_option('future.no_silent_downcasting', True)\n",
+    "\n",
+    "df[\"Checkup\"] = df[\"Checkup\"].replace(\n",
+    "\t\t\t\t\t\t\t\t['Never', 'Within the past year', 'Within the past 2 years','Within the past 5 years', '5 or more years ago'],\n",
+    "\t\t\t\t\t\t\t\t[0, 0.75, 0.50, 0.25, 1]\n",
+    "\t\t\t\t\t\t\t)\n",
+    "df[\"Checkup\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.5 , 0.75, 1.  , 0.25, 0.  ])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# In case you the dtype is shown as 'object' for the \"Checkup\" column, you can convert it to float using the below code:\n",
+    "df[\"Checkup\"] = pd.to_numeric(df[\"Checkup\"])\n",
+    "df[\"Checkup\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Custom factorized \"Age_Category\" values:\n",
+      "----------------------------------------\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.8333333333333333, 0.6666666666666666, 0.9166666666666666, 1,\n",
+       "       0.75, 0.5, 0.41666666666666663, 0, 0.16666666666666666,\n",
+       "       0.5833333333333333, 0.25, 0.3333333333333333, 0.08333333333333333],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print('Custom factorized \"Age_Category\" values:')\n",
+    "print('-'*40)\n",
+    "\n",
+    "# Uncomment the below in case of any warning for usage of deprecated method.\n",
+    "pd.set_option('future.no_silent_downcasting', True)\n",
+    "\n",
+    "df[\"Age_Category\"] = df[\"Age_Category\"].replace([\n",
+    "    '18-24',\n",
+    "    '25-29',\n",
+    "    '30-34',\n",
+    "    '35-39',\n",
+    "    '40-44',\n",
+    "    '45-49',\n",
+    "    '50-54',\n",
+    "    '55-59',\n",
+    "    '60-64',\n",
+    "    '65-69',\n",
+    "    '70-74',\n",
+    "    '75-79',\n",
+    "    '80+'\n",
+    "], [\n",
+    "    0,\n",
+    "    0.08333333333333333,\n",
+    "    0.16666666666666666,\n",
+    "    0.25,\n",
+    "    0.3333333333333333,\n",
+    "    0.41666666666666663,\n",
+    "    0.5,\n",
+    "    0.5833333333333333,\n",
+    "    0.6666666666666666,\n",
+    "    0.75,\n",
+    "    0.8333333333333333,\n",
+    "    0.9166666666666666,\n",
+    "    1\n",
+    "])\n",
+    "df[\"Age_Category\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.83333333, 0.66666667, 0.91666667, 1.        , 0.75      ,\n",
+       "       0.5       , 0.41666667, 0.        , 0.16666667, 0.58333333,\n",
+       "       0.25      , 0.33333333, 0.08333333])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# In case you the dtype is shown as 'object' for the \"Age_Category\" column, you can convert it to float using the below code:\n",
+    "df[\"Age_Category\"] = pd.to_numeric(df[\"Age_Category\"])\n",
+    "df[\"Age_Category\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Since there are is an additional argument attached to the 'Yes' or 'No', we can just factorize as 0/1 like binary valued columns.\n",
+    "# Nor can we cutomize factorize into such as \"General_Health\", \"Checkup\" and \"Age_Category\". So, we'll have to factorize them in sepreated values.\n",
+    "df[\"Diabetes\"] = pd.factorize(df[\"Diabetes\"])[0]\n",
+    "df[\"Diabetes\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 308854 entries, 0 to 308853\n",
+      "Data columns (total 19 columns):\n",
+      " #   Column                        Non-Null Count   Dtype  \n",
+      "---  ------                        --------------   -----  \n",
+      " 0   General_Health                308854 non-null  float64\n",
+      " 1   Checkup                       308854 non-null  float64\n",
+      " 2   Exercise                      308854 non-null  int64  \n",
+      " 3   Heart_Disease                 308854 non-null  int64  \n",
+      " 4   Skin_Cancer                   308854 non-null  int64  \n",
+      " 5   Other_Cancer                  308854 non-null  int64  \n",
+      " 6   Depression                    308854 non-null  int64  \n",
+      " 7   Diabetes                      308854 non-null  int64  \n",
+      " 8   Arthritis                     308854 non-null  int64  \n",
+      " 9   Sex                           308854 non-null  int64  \n",
+      " 10  Age_Category                  308854 non-null  float64\n",
+      " 11  Height_(cm)                   308854 non-null  float64\n",
+      " 12  Weight_(kg)                   308854 non-null  float64\n",
+      " 13  BMI                           308854 non-null  float64\n",
+      " 14  Smoking_History               308854 non-null  int64  \n",
+      " 15  Alcohol_Consumption           308854 non-null  float64\n",
+      " 16  Fruit_Consumption             308854 non-null  float64\n",
+      " 17  Green_Vegetables_Consumption  308854 non-null  float64\n",
+      " 18  FriedPotato_Consumption       308854 non-null  float64\n",
+      "dtypes: float64(10), int64(9)\n",
+      "memory usage: 44.8 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
   }
  ],
  "metadata": {
