Finished Logistic Regression

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2131,7 +2131,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train, test, target, target_test = train_test_split(df, data_target, test_size=0.25, random_state=10)"
+    "train, test, target, target_test = train_test_split(\n",
+    "    df, data_target, test_size=0.25, random_state=10)"
    ]
   },
   {
@@ -2667,8 +2668,305 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%% split training set to validation set\n",
-    "Xtrain, Xval, Ztrain, Zval = train_test_split(train, target, test_size=0.2, random_state=0)"
+    "# %% split training set to validation set\n",
+    "Xtrain, Xval, Ztrain, Zval = train_test_split(\n",
+    "    train, target, test_size=0.2, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating an empty dataframe for storing the results of the models\n",
+    "collect_benchmark = []\n",
+    "benchmark_cols = ['Model', 'Training_Accuracy', 'Testing_Accuracy']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Logistic Regression\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/shamith/miniconda3/envs/cardiovascular-risk-prediction/lib/python3.12/site-packages/sklearn/linear_model/_logistic.py:460: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "91.86"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logreg = LogisticRegression()\n",
+    "logreg.fit(train, target)\n",
+    "acc_log = round(logreg.score(train, target) * 100, 2)\n",
+    "acc_log"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "91.83"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "acc_test_log = round(logreg.score(test, target_test) * 100, 2)\n",
+    "acc_test_log"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model</th>\n",
+       "      <th>Training_Accuracy</th>\n",
+       "      <th>Testing_Accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Logistic Regression</td>\n",
+       "      <td>91.86</td>\n",
+       "      <td>91.83</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Model  Training_Accuracy  Testing_Accuracy\n",
+       "0  Logistic Regression              91.86             91.83"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "collect_benchmark.append(['Logistic Regression', acc_log, acc_test_log])\n",
+    "pd.DataFrame(collect_benchmark, columns=benchmark_cols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Feature</th>\n",
+       "      <th>Correlation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Height_(cm)</td>\n",
+       "      <td>1.804881</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Age_Category</td>\n",
+       "      <td>1.040374</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Other_Cancer</td>\n",
+       "      <td>0.527871</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Depression</td>\n",
+       "      <td>0.498679</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Exercise</td>\n",
+       "      <td>0.214648</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Arthritis</td>\n",
+       "      <td>0.208759</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Diabetes</td>\n",
+       "      <td>0.128298</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>BMI</td>\n",
+       "      <td>0.005849</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Green_Vegetables_Consumption</td>\n",
+       "      <td>-0.000250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>FriedPotato_Consumption</td>\n",
+       "      <td>-0.000504</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Smoking_History</td>\n",
+       "      <td>-0.010405</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Weight_(kg)</td>\n",
+       "      <td>-0.019690</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Fruit_Consumption</td>\n",
+       "      <td>-0.024017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Checkup</td>\n",
+       "      <td>-0.252214</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Skin_Cancer</td>\n",
+       "      <td>-0.473733</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Alcohol_Consumption</td>\n",
+       "      <td>-0.646353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Sex</td>\n",
+       "      <td>-0.790430</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         Feature  Correlation\n",
+       "9                    Height_(cm)     1.804881\n",
+       "8                   Age_Category     1.040374\n",
+       "3                   Other_Cancer     0.527871\n",
+       "4                     Depression     0.498679\n",
+       "1                       Exercise     0.214648\n",
+       "6                      Arthritis     0.208759\n",
+       "5                       Diabetes     0.128298\n",
+       "11                           BMI     0.005849\n",
+       "15  Green_Vegetables_Consumption    -0.000250\n",
+       "16       FriedPotato_Consumption    -0.000504\n",
+       "12               Smoking_History    -0.010405\n",
+       "10                   Weight_(kg)    -0.019690\n",
+       "14             Fruit_Consumption    -0.024017\n",
+       "0                        Checkup    -0.252214\n",
+       "2                    Skin_Cancer    -0.473733\n",
+       "13           Alcohol_Consumption    -0.646353\n",
+       "7                            Sex    -0.790430"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coeff_df = pd.DataFrame(train.columns.delete(0))\n",
+    "coeff_df.columns = ['Feature']\n",
+    "coeff_df[\"Correlation\"] = pd.Series(logreg.coef_[0])\n",
+    "\n",
+    "coeff_df.sort_values(by='Correlation', ascending=False)"
    ]
   }
  ],
