Finished Decision Tree

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2675,7 +2675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2760,7 +2760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2805,7 +2805,7 @@
        "0  Logistic Regression              91.86             91.83"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2817,7 +2817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2956,7 +2956,7 @@
        "7                            Sex    -0.790430"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2967,6 +2967,130 @@
     "coeff_df[\"Correlation\"] = pd.Series(logreg.coef_[0])\n",
     "\n",
     "coeff_df.sort_values(by='Correlation', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Decision Tree\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100.0"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "decision_tree = DecisionTreeClassifier()\n",
+    "decision_tree.fit(train, target)\n",
+    "acc_decision_tree = round(decision_tree.score(train, target) * 100, 2)\n",
+    "acc_decision_tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "85.98"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "acc_test_decision_tree = round(decision_tree.score(test, target_test) * 100, 2)\n",
+    "acc_test_decision_tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model</th>\n",
+       "      <th>Training_Accuracy</th>\n",
+       "      <th>Testing_Accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Logistic Regression</td>\n",
+       "      <td>91.86</td>\n",
+       "      <td>91.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Decision Tree</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>85.98</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Model  Training_Accuracy  Testing_Accuracy\n",
+       "0  Logistic Regression              91.86             91.83\n",
+       "1        Decision Tree             100.00             85.98"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "collect_benchmark.append(['Decision Tree', acc_decision_tree, acc_test_decision_tree])\n",
+    "pd.DataFrame(collect_benchmark, columns=benchmark_cols)"
    ]
   }
  ],
