Finished Random Forest Classification

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -3089,7 +3089,138 @@
     }
    ],
    "source": [
-    "collect_benchmark.append(['Decision Tree', acc_decision_tree, acc_test_decision_tree])\n",
+    "collect_benchmark.append(\n",
+    "    ['Decision Tree', acc_decision_tree, acc_test_decision_tree])\n",
+    "pd.DataFrame(collect_benchmark, columns=benchmark_cols)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random Forest Classification\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import GridSearchCV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100.0 {'n_estimators': 300}\n"
+     ]
+    }
+   ],
+   "source": [
+    "random_forest = GridSearchCV(estimator=RandomForestClassifier(), param_grid={'n_estimators': [100, 300]}, cv=5).fit(train, target)\n",
+    "random_forest.fit(train, target)\n",
+    "acc_random_forest = round(random_forest.score(train, target) * 100, 2)\n",
+    "print(acc_random_forest,random_forest.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "91.86"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "acc_test_random_forest = round(random_forest.score(test, target_test) * 100, 2)\n",
+    "acc_test_random_forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model</th>\n",
+       "      <th>Training_Accuracy</th>\n",
+       "      <th>Testing_Accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Logistic Regression</td>\n",
+       "      <td>91.86</td>\n",
+       "      <td>91.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Decision Tree</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>85.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Random Forest Classification</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>91.86</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          Model  Training_Accuracy  Testing_Accuracy\n",
+       "0           Logistic Regression              91.86             91.83\n",
+       "1                 Decision Tree             100.00             85.98\n",
+       "2  Random Forest Classification             100.00             91.86"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "collect_benchmark.append(\n",
+    "    ['Random Forest Classification', acc_random_forest, acc_test_random_forest])\n",
     "pd.DataFrame(collect_benchmark, columns=benchmark_cols)"
    ]
   }
